fix: hide scrollbars

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -130,5 +130,20 @@ body {
   }
   html {
     @apply font-sans;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+    &::-webkit-scrollbar {
+      display: none;
+    }
+  }
+}
+
+@layer utilities {
+  .no-scrollbar {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+    &::-webkit-scrollbar {
+      display: none;
+    }
   }
 }
